Gap fix

--- a/src/css/Work.css
+++ b/src/css/Work.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 5rem;
+  gap: 1.5rem;
   height: 100%;
   padding-top: 1.5rem;
 }
@@ -56,6 +56,7 @@
 
 @media screen and (min-width: 40em) {
   #work {
+    gap: 3rem;
     padding-top: 3rem;
   }
   .work__container iframe {
